--- a/app/src/main/res/layout/my_custom_adapter.xml
+++ b/app/src/main/res/layout/my_custom_adapter.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="25dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imView"
-        android:layout_width="17dp"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="100dp"
         android:layout_marginTop="25dp"
         android:layout_weight="1"
         android:clickable="true"
@@ -25,6 +24,7 @@
         android:clickable="true"
         android:contextClickable="false"
         android:gravity="center_horizontal"
+        android:minWidth="32dp"
         android:minHeight="48dp"
         android:text="TextView"
         android:textSize="20sp"
