--- a/app/src/main/res/layout/activity_meal_fragment.xml
+++ b/app/src/main/res/layout/activity_meal_fragment.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mealFragmentID"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".mealFragment">
-
+    tools:context=".MealFragmentActivity">
 
     <ListView
-        android:id="@+id/lsViewMeals"
+        android:id="@+id/listViewMeals"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
