--- a/app/src/main/res/layout/new_option_adapter.xml
+++ b/app/src/main/res/layout/new_option_adapter.xml
@@ -3,41 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/mealOptionText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="TextView:"
+            android:textColor="#000" />
 
         <EditText
             android:id="@+id/inMealText"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/app_name"
-            android:inputType="textPersonName" />
-
-        <TextView
-            android:id="@+id/outMealText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/mealButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add + "
+            android:layout_marginTop="10dp"
+            android:hint="Enter Meals"
+            android:paddingLeft="10dp"
             android:textColor="#000" />
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/Light_Primary"/>
 </LinearLayout>
