--- a/app/src/main/res/layout/activity_meal_fragment.xml
+++ b/app/src/main/res/layout/activity_meal_fragment.xml
@@ -20,6 +20,6 @@
     <ListView
         android:id="@+id/outMealText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="200dp" />
 
 </LinearLayout>
